--- a/.env
+++ b/.env
@@ -20,8 +20,8 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_CONNECTION=mariadb
+DB_HOST=http://51.91.67.133
 DB_PORT=3306
 DB_DATABASE=ecodeli
 DB_USERNAME=root
